Fixed info page overflow

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -428,6 +428,7 @@ img#collapsible-chevron {
 
     width: 40%;
     margin: auto auto;
+    overflow: scroll;
 }
 
 .info-p {
